<resources>
    <string name="app_name">Pathfinder Character Sheet</string>

    <string name="title_activity_stats_screen">StatsScreen</string>
    <!--Generic Strings-->
    <string name="Name">Name</string>
    <string name="Roll">Roll</string>
    <string name="Value">Value</string>
    <string name="Error">Error</string>
    <string name="None">None</string>
    <string name="Emdash">-</string>
    <string name="Confirm">Confirm</string>
    <string name="CloseDialog">Close Dialog</string>
    <!--Stat Strings-->
    <string name="StatScore">Score</string>
    <string name="StatModifier">Mod</string>
    <string name="StrengthScore">Strength</string>
    <string name="RollStrength">Roll Strength Check</string>
    <string name="SetStrengthHint">Set Strength Score</string>
    <string name="DexterityScore">Dexterity</string>
    <string name="RollDexterity">Roll Dexterity Check</string>
    <string name="SetDexterityHint">Set Dexterity Score</string>
    <string name="ConstitutionScore">Constitution</string>
    <string name="RollConstitution">Roll Constitution Check</string>
    <string name="SetConstitutionHint">Set Constitution Score</string>
    <string name="IntelligenceScore">Intelligence</string>
    <string name="RollIntelligence">Roll Intelligence Check</string>
    <string name="SetIntelligenceHint">Set Intelligence Score</string>
    <string name="WisdomScore">Wisdom</string>
    <string name="RollWisdom">Roll Wisdom Check</string>
    <string name="SetWisdomHint">Set Wisdom Score</string>
    <string name="CharismaScore">Charisma</string>
    <string name="RollCharisma">Roll Charisma Check</string>
    <string name="SetCharismaHint">Set Charisma Score</string>
    <!--Movement Strings-->
    <string name="MovementFeet">Feet</string>
    <string name="MovementSquares">Squares</string>
    <string name="BaseMovementSpeed">Base</string>
    <string name="ArmorMovementSpeed">Armor</string>
    <string name="FlyingMovementSpeed">Fly</string>
    <string name="SwimmingMovementSpeed">Swim</string>
    <string name="ClimbingMovementSpeed">Climb</string>
    <string name="BurrowingMovementSpeed">Burrow</string>
    <!--Initiative String-->
    <string name="Initiative">Initiative</string>
    <!--Combat Maneuver Strings -->
    <string name="CMB">CMB</string>
    <string name="CMD">CMD</string>
    <string name="RollCombatManeuver">Roll Combat Maneuver</string>
    <!--Saves strings-->
    <string name="Fort">Fortitude</string>
    <string name="Ref">Reflex</string>
    <string name="Will">Will</string>
    <string name="RollFortSave">Roll Fortitude Save</string>
    <string name="RollReflexSave">Roll Reflex Save</string>
    <string name="RollWillSave">Roll Will Save</string>
    <string name="EditSaves">Edit Saves</string>
    <!--Armor Strings-->
    <string name="FlatFootedAC">Flat Footed</string>
    <string name="TouchAC">Touch</string>
    <string name="TotalAC">Armor Class</string>
    <!--Hit Point Strings-->
    <string name="HitPoints">Hit Points</string>
    <string name="BaseAttackBonus">Base Attack Bonus</string>
    <string name="SpellResistance">Spell Resistance</string>
    <!--Skill Strings-->
    <string name="SortByClassSkills">Sort by Class Skills</string><!--TODO: Not so much sort by class skills as bring class skills to top. Is there a better way to say that?-->
    <string name="SortByTotalRanks">Sort by Total Ranks</string>
    <string name="AddNewSkill">Add New Skill</string>
    <string name="RollSkillButtonContentDescription">Roll Skill Button</string>
    <string name="LevelUpPoints">Level Up Skill Points</string>
    <string name="FavoredClassPoints">Favored Class Points</string>
    <string name="AddCustomSkill">Add Custom Skill</string>
    <string name="SkillNameLabel">Skill Name:</string>
    <string name="EnterSkillNameHint">Enter Skill Name</string>
    <string name="AddedStatLabel">Stat:</string>
    <string name="SetPoints">Set Points</string>
    <string name="DeleteSkill">Delete Skill</string>
    <!--Equipment Strings-->
    <string name="MagicBonus">Magic Bonus</string>
    <string name="EquipmentAbilities">Abilities</string>
    <string name="ArmorAndWeapons">Armor and Weapons</string>
    <string name="WondrousItems">Wondrous Items</string>
    <string name="Critical">Critical</string>
    <string name="DamageTypes">Type</string>
    <string name="Range">Range</string>
    <string name="Damage">Damage</string>
    <string name="Category">Category</string>
    <string name="CheckPenalty">Check Penalty</string>
    <string name="SpellFailure">Spell Failure</string>
    <string name="MaxDex">Max Dex</string>
    <string name="Weight">Weight</string>
    <string name="EquippedShort">E</string>
    <string name="Unequip">Unequip</string>
    <string name="MainHand">Main Hand</string>
    <string name="OffHand">Off Hand</string>
    <string name="Armor">Armor</string>
    <string name="Shield">Shield</string>
    <string name="ItemToEquip">Item To Equip:</string>
    <!--Spell Strings-->
    <string name="CastingTime">Casting Time</string>
    <string name="Targets">Targets</string>
    <string name="Duration">Duration</string>
    <string name="SavingThrow">Saving Throw</string><!--Todo:Saving throw and spell resistance aren't descriptive as labels, may want to change at some point-->
    <string name="AttacksSpellResistance">Spell Resistance</string>
    <string name="Components">Required Components</string>
    <string name="SpellSchool">Spell School [Descriptors]</string>
    <string name="CantripSpells">Cantrips</string>
    <string name="FirstLevelSpells">First Level Spells</string>
    <string name="SecondLevelSpells">Second Level Spells</string>
    <string name="ThirdLevelSpells">Third Level Spells</string>
    <string name="FourthLevelSpells">Fourth Level Spells</string>
    <string name="FifthLevelSpells">Fifth Level Spells</string>
    <string name="SixthLevelSpells">Sixth Level Spells</string>
    <string name="SeventhLevelSpells">Seventh Level Spells</string>
    <string name="EighthLevelSpells">Eighth Level Spells</string>
    <string name="NinthLevelSpells">Ninth Level Spells</string>
    <string name="AddSpellButtonContentDescription">Add Spell Button</string>
    <!--Inventory Strings-->
    <string name="SortByEquipped">Sort by Equipped</string>
    <string name="SortByCost">Sort by Cost</string>
    <string name="SortByWeight">Sort by Weight</string>
    <string name="MediumEncumbrance">You are at Medium Encumbrance</string>
    <string name="HeavyEncumbrance">You are at Heavy Encumbrance</string>
    <string name="PlatinumLabel">Platinum: </string>
    <string name="GoldLabel">Gold: </string>
    <string name="SilverLabel">Silver: </string>
    <string name="CopperLabel">Copper: </string>
    <string name="TotalWeight">Total Weight: </string>
    <string name="TotalCost">Total Cost of Items: </string>
    <string name="AddItemToInventory">Add Item to Inventory</string>
    <string name="ItemName">Item Name</string>
    <string name="ItemCost">Cost</string>
    <string name="ItemWeight">Weight</string>
    <string name="FindEquipment">Find Equipment</string>
    <string name="SortByName">Sort by Name</string>
    <!--Ability Strings-->
    <string name="SortBySource">Sort by Source</string>
    <string name="AddAbilityButtonContentDescription">Add Ability Button</string>
    <!--Character List Strings-->
    <string name="CharactersList">Characters</string>
    <string name="AddNewCharacter">Add New Character</string>
    <!--Edit Strings-->
    <string name="EditCharacterProfile">Edit Character Profile</string>
    <string name="EditCharacterName">Edit Character Name</string>
    <string name="EditAbilityScores">Edit Ability Scores</string>
    <string name="EditSkillValues">Edit Skill Points Invested</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="AddNameHint">Enter Name Here</string>
    <string name="NewName">New Name</string>
    <!-- Add Armor To Inventory String -->
    <string name="AddToInventoryLabel">Armor</string>
    <string name="ACBonus">AC Bonus:</string>
    <string name="MaxDexBonus">Max Dexterity Bonus:</string>
    <string name="ArmorCheckPenalty">Armor Check Penalty:</string>
    <string name="ArcaneSpellFailureChance">Arcane Spell Failure Chance:</string>
    <string name="WeightLabel">Weight:</string>
    <string name="CostLabel">Cost:</string>
    <string name="MaximumSpeed">Maximum Speed:</string>
    <string name="DescriptionLabel">Description:</string>
    <string name="SelectAnArmorHint">Select an Armor</string>
</resources>
