<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <TextView
        android:background="@drawable/header_border"
        android:text="@string/EditCharacterProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPlainText"
        android:gravity="center"/>
    <LinearLayout
        android:background="@drawable/field_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPlainText"
            android:text="@string/Name"
            android:gravity="center"/>
        <EditText
            android:id="@+id/GetCharacterNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/EditCharacterName"
            android:inputType="textCapWords" />
    </LinearLayout>
    <Button
        android:id="@+id/SaveCharacterProfileButton"
        android:text="@string/SaveChanges"/>
</android.support.constraint.LinearLayout>