<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Name"
        android:background="@drawable/header_border"
        android:textColor="@color/colorGoldText"
        android:layout_weight=".33"/>
    <TextView
        android:id="@+id/Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Value"
        android:background="@drawable/header_border"
        android:textColor="@color/colorGoldText"
        android:layout_weight=".33"/>
    <ImageButton android:id="@+id/RollSave"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/header_border"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_weight=".33"
        android:src="@drawable/d20_image"
        android:contentDescription="@string/Roll" />
</LinearLayout>