<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:gravity="center"
        android:text="@string/Name"
        android:maxLines="1"
        android:ellipsize="end"
        android:background="@drawable/header_border"
        android:textColor="@color/colorPlainText"/>
    <TextView
        android:id="@+id/Feet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:gravity="center"
        android:text="@string/MovementFeet"
        android:maxLines="1"
        android:ellipsize="end"
        android:background="@drawable/header_border"
        android:textColor="@color/colorPlainText"/>
    <TextView
        android:id="@+id/Squares"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".33"
        android:gravity="center"
        android:text="@string/MovementSquares"
        android:maxLines="1"
        android:ellipsize="end"
        android:background="@drawable/header_border"
        android:textColor="@color/colorPlainText"/>
</LinearLayout>