<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center"
            android:text="@string/CMB"
            android:background="@drawable/header_border"
            android:textColor="@color/colorGoldText"/>
        <TextView
            android:id="@+id/CMBValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center"
            android:text="@string/Value"
            android:background="@drawable/field_border"
            android:textColor="@color/colorGoldText"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center"
            android:text="@string/Roll"
            android:background="@drawable/field_border"
            android:textColor="@color/colorGoldText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center"
            android:text="@string/CMD"
            android:background="@drawable/header_border"
            android:textColor="@color/colorGoldText"/>
        <TextView
            android:id="@+id/CMDValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".66"
            android:gravity="center"
            android:background="@drawable/field_border"
            android:textColor="@color/colorGoldText"/>
    </LinearLayout>
</LinearLayout>