<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pathfinderstattracker.pathfindercharactersheet.views.StatRowView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ccc"
        android:paddingBottom="40dp"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/StatName"/>
        <TextView
            android:id="@+id/Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/StatScore"/>
        <TextView
            android:id="@+id/Modifier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/StatModifier"/>
        <TextView
            android:id="@+id/Roll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/Roll"/>

    </com.pathfinderstattracker.pathfindercharactersheet.views.StatRowView>


</FrameLayout>
