<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Name"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/header_border"
            android:textColor="@color/colorPlainText"
            android:layout_weight=".33"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Value"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/header_border"
            android:textColor="@color/colorPlainText"
            android:layout_weight=".33"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:background="@drawable/header_border">
            <ImageButton
                android:id="@+id/EditsSavesButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/d20_image"
                android:contentDescription="@string/EditSaves" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Fort"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/header_border"
            android:textColor="@color/colorPlainText"
            android:layout_weight=".33"/>
        <TextView
            android:id="@+id/FortSaveValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/field_border"
            android:textColor="@color/colorPlainText"
            android:layout_weight=".33"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:background="@drawable/header_border">
            <ImageButton
                android:id="@+id/RollFortSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/d20_image"
                android:contentDescription="@string/RollFortSave" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Ref"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/header_border"
            android:textColor="@color/colorPlainText"
            android:layout_weight=".33"/>
        <TextView
            android:id="@+id/ReflexSaveValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/field_border"
            android:textColor="@color/colorPlainText"
            android:layout_weight=".33"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:background="@drawable/header_border">
            <ImageButton
                android:id="@+id/RollReflexSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/d20_image"
                android:contentDescription="@string/RollReflexSave" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Will"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/header_border"
            android:textColor="@color/colorPlainText"
            android:layout_weight=".33"/>
        <TextView
            android:id="@+id/WillSaveValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/field_border"
            android:textColor="@color/colorPlainText"
            android:layout_weight=".33"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:background="@drawable/header_border">
            <ImageButton
                android:id="@+id/RollWillSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/d20_image"
                android:contentDescription="@string/RollWillSave" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
