<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--Todo: Eventually we'll want another section for tracking ammo for ranged weapons, but since that's part of combat tracking, we'll skip it for now-->
    <TextView
        android:id="@+id/MagicBonusDropdownLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorGoldText"
        android:text="@string/MagicBonus"
        android:background="@drawable/header_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/EquipmentAbilitiesDropdownLabel"
        app:layout_constraintHorizontal_chainStyle="spread"/>
    <TextView
        android:id="@+id/MagicBonusDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorGoldText"
        android:background="@drawable/transparent_border"
        app:layout_constraintLeft_toLeftOf="@id/MagicBonusDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/MagicBonusDropdownLabel"
        app:layout_constraintRight_toRightOf="@id/MagicBonusDropdownLabel"/>
    <TextView
        android:id="@+id/EquipmentAbilitiesDropdownLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorGoldText"
        android:text="@string/EquipmentAbilities"
        android:background="@drawable/header_border"
        app:layout_constraintLeft_toRightOf="@id/MagicBonusDropdownLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/EquipmentNameDropdownLabel"/>
    <TextView
        android:id="@+id/EquipmentAbilitiesDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/None"
        android:textColor="@color/colorGoldText"
        android:background="@drawable/transparent_border"
        app:layout_constraintLeft_toLeftOf="@id/EquipmentAbilitiesDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/EquipmentAbilitiesDropdownLabel"
        app:layout_constraintRight_toRightOf="@id/EquipmentAbilitiesDropdownLabel"/>
    <TextView
        android:id="@+id/EquipmentNameDropdownLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorGoldText"
        android:text="@string/Name"
        android:background="@drawable/header_border"
        app:layout_constraintLeft_toRightOf="@id/EquipmentAbilitiesDropdownLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/EquipmentNameDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorGoldText"
        android:background="@drawable/transparent_border"
        app:layout_constraintLeft_toLeftOf="@id/EquipmentNameDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/EquipmentNameDropdownLabel"
        app:layout_constraintRight_toRightOf="@id/EquipmentNameDropdownLabel"/>
    <TextView
        android:id="@+id/EquipmentCriticalDropdownLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorGoldText"
        android:text="@string/Critical"
        android:background="@drawable/header_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MagicBonusDropdown"
        app:layout_constraintRight_toLeftOf="@id/DamageTypeDropdownLabel"/>
    <TextView
        android:id="@+id/EquipmentCriticalDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorGoldText"
        android:background="@drawable/transparent_border"
        app:layout_constraintLeft_toLeftOf="@id/EquipmentCriticalDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/EquipmentCriticalDropdownLabel"
        app:layout_constraintRight_toRightOf="@id/EquipmentCriticalDropdownLabel"/>
    <TextView
        android:id="@+id/DamageTypeDropdownLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorGoldText"
        android:text="@string/DamageTypes"
        android:background="@drawable/header_border"
        app:layout_constraintLeft_toRightOf="@id/EquipmentCriticalDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/MagicBonusDropdown"
        app:layout_constraintRight_toLeftOf="@id/EquipmentRangeDropdownLabel"/>
    <TextView
        android:id="@+id/DamageTypeDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorGoldText"
        android:background="@drawable/transparent_border"
        app:layout_constraintLeft_toLeftOf="@id/DamageTypeDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/DamageTypeDropdownLabel"
        app:layout_constraintRight_toRightOf="@id/DamageTypeDropdownLabel"/>
    <TextView
        android:id="@+id/EquipmentRangeDropdownLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorGoldText"
        android:text="@string/Range"
        android:background="@drawable/header_border"
        app:layout_constraintLeft_toRightOf="@id/DamageTypeDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/MagicBonusDropdown"
        app:layout_constraintRight_toLeftOf="@id/EquipmentDamageDropdownLabel"/>
    <TextView
        android:id="@+id/EquipmentRangeDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorGoldText"
        android:background="@drawable/transparent_border"
        app:layout_constraintLeft_toLeftOf="@id/EquipmentRangeDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/EquipmentRangeDropdownLabel"
        app:layout_constraintRight_toRightOf="@id/EquipmentRangeDropdownLabel"/>
    <TextView
        android:id="@+id/EquipmentDamageDropdownLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorGoldText"
        android:text="@string/Damage"
        android:background="@drawable/header_border"
        app:layout_constraintLeft_toRightOf="@id/EquipmentRangeDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/MagicBonusDropdown"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/EquipmentDamageDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorGoldText"
        android:background="@drawable/transparent_border"
        app:layout_constraintLeft_toLeftOf="@id/EquipmentDamageDropdownLabel"
        app:layout_constraintTop_toBottomOf="@id/EquipmentDamageDropdownLabel"
        app:layout_constraintRight_toRightOf="@id/EquipmentDamageDropdownLabel"/>
</android.support.constraint.ConstraintLayout>
