<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="@string/HitPoints"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/header_border"
            android:textColor="@color/colorPlainText"/>
        <TextView
            android:id="@+id/HitPointValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:background="@drawable/field_border"
            android:textColor="@color/colorPlainText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="@string/BaseAttackBonus"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/header_border"
            android:textColor="@color/colorPlainText"/>
        <TextView
            android:id="@+id/BaseAttackBonusValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:background="@drawable/field_border"
            android:textColor="@color/colorPlainText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="@string/SpellResistance"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/header_border"
            android:textColor="@color/colorPlainText"/>
        <TextView
            android:id="@+id/SpellResistanceValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:background="@drawable/field_border"
            android:textColor="@color/colorPlainText"/>
    </LinearLayout>
</LinearLayout>